added DAG1-Test and fixt bug with dependencies, but we need to test more